--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -1213,9 +1213,9 @@
     "<a id='crops'></a>\n",
     "## Crops\n",
     "\n",
-    "The dataset covers production of all primary crops for all countries and regions in the world and **the production is only for human consumption**. Household production is not included in the data, that is, crops that are planted for personal consumption, in for example one’s garden. The dataset is available at <http://www.fao.org/faostat/en/#data/QC>.  \n",
+    "The crops dataset covers production of all primary crops for all countries and regions in the world and **the production is only for human consumption**. Household production is not included in the data, that is, crops that are planted for personal consumption, in for example one’s garden. The dataset is available at <http://www.fao.org/faostat/en/#data/QC>.  \n",
     "\n",
-    "Each row of the crops dataset contains data for a certain country/area, crop item and year. There are 7 columns of metadata, which can be seen below. The years in the dataset span from 1961 to 2007.\n"
+    "Each row of the crops dataset contains data for a certain country/area, crop item and year. There are 7 columns of metadata, and the years in the dataset span from 1961 to 2007."
    ]
   },
   {
@@ -1325,7 +1325,8 @@
     "- **Area harvested** refer to the area under cultivation. Area under cultivation means the area that corresponds to the total sown area, but after the harvest it excludes ruined areas (e.g. due to natural disasters). If the same land parcel is used twice in the same year, the area of this parcel can be counted twice. \n",
     "- **Production quantity** means the harvested production. Harvested production means production including on-holding losses and wastage, quantities consumed directly on the farm and marketed quantities, indicated in units of basic product weight. *Harvest year* means the calendar year in which the harvest begins. \n",
     "- **Yield** means the harvested production per ha for the area under cultivation. \n",
-    "- **Seed** quantity comprises all amounts of the commodity in question used during the reference period for reproductive purposes, such as seed or seedlings. Usually, the average seed rate in any given country does not vary greatly from year to year."
+    "- **Seed** quantity comprises all amounts of the commodity in question used during the reference period for reproductive purposes, such as seed or seedlings. Usually, the average seed rate in any given country does not vary greatly from year to year.\n",
+    "- **Gross Production, Net Production, Net per capita PIN, Grs per capita PIN, Net PIN, Gross PIN** (element codes > 140)"
    ]
   },
   {
@@ -1333,7 +1334,7 @@
    "metadata": {},
    "source": [
     "#### Categories\n",
-    "Crop statistics are recorded for 172 products, covering the following categories: Crops Primary, Fibre Crops Primary, Cereals, Coarse Grain, Citrus Fruit, Fruit, Jute Jute-like Fibres, Oilcakes Equivalent, Oil crops Primary, Pulses, Roots and Tubers, Treenuts and Vegetables and Melons. The objective is to comprehensively cover production of all primary crops for all countries and regions in the world. \n",
+    "Crop statistics are recorded for 172 products, covering the following categories: Fibre Crops Primary, Cereals, Coarse Grain, Citrus Fruit, Fruit, Jute Jute-like Fibres, Oilcakes Equivalent, Oil crops Primary, Pulses, Roots and Tubers, Treenuts and Vegetables and Melons. The objective is to comprehensively cover production of all primary crops for all countries and regions in the world. \n",
     "\n"
    ]
   },
@@ -1445,7 +1446,7 @@
    "metadata": {},
    "source": [
     "#### Unnecessary rows:\n",
-    "The dataset is ordered according to the alphabetical order of the _Item_ and after the end of each Item, there are rows that contain the footnote-descriptions above.  \n",
+    "The dataset is ordered according to the alphabetical order of the _Item_ and after the end of each Item, there are rows that contain the footnote-descriptions mentioned before.  \n",
     "We therefore need to remove these rows since they don't contain any useful data."
    ]
   },
@@ -2052,7 +2053,6 @@
    ],
    "source": [
     "# Splitting crops_data into country, continent and area based sets and renaming Area column\n",
-    "\n",
     "crops_country = crops_cleaned[np.logical_not(country_series.str.endswith('+'))].rename({'Area': 'Area'}, axis=1)\n",
     "crops_remain = crops_cleaned[country_series.str.endswith('+')]\n",
     "\n",
@@ -2109,9 +2109,6 @@
    ],
    "source": [
     "crops_yearly = crops_cont.groupby(['Area', 'Year']).agg({'Value':'sum'}).reset_index()\n",
-    "\n",
-    "#Drop years after 2007 as crops data is only until 2007.\n",
-    "area_year_population.drop(area_year_population[area_year_population.Year >2007].index, inplace = True)\n",
     "plot_yearly(crops_yearly, 'Crops', area_year_population, 'Area')"
    ]
   },
@@ -2156,7 +2153,7 @@
     "plt.title('Crosscorrelation', fontsize = 20)\n",
     "bottom, top = ax.get_ylim()\n",
     "ax.set_ylim(bottom + 0.5, top - 0.5)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -2220,7 +2217,7 @@
     "    else:\n",
     "        plt.plot(x, y)\n",
     "\n",
-    "    plt.legend()\n"
+    "    plt.legend()"
    ]
   },
   {
@@ -2589,7 +2586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we only have data in the other datasets from 1961 to 2013, we remove the extra years. "
+    "As we only have data in the other datasets from 1961 to 2007/2013, we remove the extra years. "
    ]
   },
   {
@@ -2921,14 +2918,14 @@
     "from scripts.helpers import explain_df\n",
     "\n",
     "print(explain_df.__doc__)\n",
-    "explain_df(emission_data)\n"
+    "explain_df(emission_data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see from the print above we have data from all the continents, between 1961 and 2017, only agriculture total emission, all data is in CO2 gigagram. \n",
+    "As you can see from the print above we have data from all the continents, between 1961 and 2017, regarding agriculture total emissions and all data is in CO2 gigagram. \n",
     "\n",
     "Lets examine if there's any data missing."
    ]
@@ -3027,7 +3024,7 @@
    "source": [
     "#### Emission data number 2\n",
     "\n",
-    "We also have another emissions file with some categories to easier be able to determine differences in emission between crops and livestock production. This data contains each country a"
+    "We also have another emissions file with some categories to easier be able to determine differences in emission between crops and livestock production. This data contains emission data for each continent."
    ]
   },
   {
@@ -3057,7 +3054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset contains data about the CO2 emissions coming from various areas (_items_) such as _Rice_ an _Meat, sheep_ etc. Some of the data has information about production of each item which is not out of interest as we are interested in emissions. We will therefore remove rows with these values."
+    "This dataset contains data about the CO2 emissions coming from various areas (_items_) such as _rice_, _meat, sheep_ etc. Some of the data has information about production of each item which is not out of interest as we are interested in emissions. We will therefore remove rows with these values."
    ]
   },
   {
@@ -3234,7 +3231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**For now we will stick to the first dataset discussed in this notebook since we are more interested in the total agriculture emissions.**\n",
+    "**For now we will stick to the first dataset discussed in this notebook section since we are more interested in the total agriculture emissions.**\n",
     "\n",
     "Let's plot the _Agriculture, total_ emissions from the dataset 1. Let's also make use of the population data so we can normalize the data on the population of a given continent or the world."
    ]
@@ -3294,8 +3291,6 @@
     "    \n",
     "    plot_y_emi.append(area_year_emission[area_year_emission['Area'] == area].Value.values.tolist())\n",
     "\n",
-    "\n",
-    "\n",
     "plt.subplot(2,2,1)\n",
     "plt.legend(areas)\n",
     "plt.title('(1) Agriculture emission per continent')\n",
@@ -3335,12 +3330,12 @@
    "metadata": {},
    "source": [
     "##### Emission area plot \n",
-    "There's a few questions that arise when observing the plots above:\n",
-    "- We can observe a big increase in emission around year 1990 which seem slightly weird.\n",
+    "There are a few questions that arise when observing the plots above:\n",
+    "- We can observe a big increase in emission around year 1990 which seems slightly weird.\n",
     "- In the normalized continent emissions _Oceania_ has a much greater and volatile normalized emission compared to the other continents. The relatively higher normalized emission by _Oceania_ could be reasonable given that they have a lot of livestock production, however the sudden jumps in value from year to year seem off.\n",
     "\n",
     "Let's try and find an answer to these obeservations.\n",
-    "The reason that the emission jumps in 1990 is most likely because of _New estimates of CO 2 forest emissions and removals: 1990–2015._ Which is stated [at faostat](http://www.fao.org/faostat/en/#data/GT/metadata), where the data comes from, in point number 10.\n",
+    "The reason that the emission jumps in 1990 is most likely because of _New estimates of CO2 forest emissions and removals: 1990–2015._ Which is stated [at faostat](http://www.fao.org/faostat/en/#data/GT/metadata), where the data comes from, in point number 10.\n",
     "\n",
     "Now, when it comes to the weird behaviour in _Oceania_'s emissions when should look at the data we have acquired regarding the crop and livestock production aswell as the population that _Oceania_ has in order to explain the weirdness. \n",
     " "
@@ -3436,7 +3431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example use of second dataset"
+    "#### Example use of second emissions dataset"
    ]
   },
   {
@@ -3445,6 +3440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Emission data for sheep production for every continent and year\n",
     "sheep_prod = categorized_emission_data[categorized_emission_data.Item.str.contains('sheep')]\n",
     "\n",
     "sheep_data = sheep_prod.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'})\n",
@@ -3613,7 +3609,6 @@
     }
    ],
    "source": [
-    "# Data for each countries sheep emissions per year\n",
     "sheep_data.reset_index()"
    ]
   },
@@ -3642,12 +3637,12 @@
     "3 - Finish visuals and make a draft of report/data story (13th December)\n",
     "\n",
     "4 - Final Deadline (20th December)\n",
-    "- Make sure the report/data is consistent, and includes all the important information.\n",
+    "- Make sure the report/data story is consistent, and includes all the important information.\n",
     "- Make sure the final notebook (extending on Milestone 2) is comprehensive and includes all mathematical calculations.\n",
     "- Update readme with contributions of team members (including who works on the final presentation)\n",
     "\n",
     "5 - Presentations (18th January)\n",
-    "- Finnish poster for presentation\n",
+    "- Finish poster for presentation\n",
     "- Decide on who talks\n",
     "- Prepare a 3 min presentation"
    ]
