--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "# Milestone 2\n",
-    "This notebook summarizes all that we have done in the project so far, and below are the research questions we wish to answer in this project.\n",
+    "This notebook summarizes all that we have done in the project so far, more detailed and thorough data exploration and cleaning can be found in each of the cleaning notebooks. Below are the research questions we wish to answer in this project.\n",
     "\n",
     "1. How has the crops/livestock primary production developed since 1960?\n",
     "2. Is there a connection between the development of livestock primary production and crop production?\n",
     "3. How are the differences in production quantities between the different continents?\n",
     "4. How has the development in agriculture affected emission of greenhouse gasses?\n",
     "\n",
-    "To answer this we are using 4 different datasets, all are collected from FAO-STAT (Food and Agriculture Organization of the United Nations - <http://www.fao.org/faostat/en/#data>). In this notebook we will describe and clean all of the data. \n"
+    "To answer this we are using 4 different datasets, all are collected from FAO-STAT (Food and Agriculture Organization of the United Nations - <http://www.fao.org/faostat/en/#data>). In this notebook we will describe and clean all of the data. "
    ]
   },
   {
