Added links to all datasets

--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -1213,7 +1213,7 @@
     "<a id='crops'></a>\n",
     "## Crops\n",
     "\n",
-    "The crops dataset covers production of all primary crops for all countries and regions in the world and **the production is only for human consumption**. Household production is not included in the data, that is, crops that are planted for personal consumption, in for example one’s garden. The dataset is available at <http://www.fao.org/faostat/en/#data/QC>.  \n",
+    "The crops dataset covers production of all primary crops for all countries and regions in the world and **the production is only for human consumption**. Household production is not included in the data, that is, crops that are planted for personal consumption, in for example one’s garden. The dataset is available at https://www.kaggle.com/unitednations/global-food-agriculture-statistics.  \n",
     "\n",
     "Each row of the crops dataset contains data for a certain country/area, crop item and year. There are 7 columns of metadata, and the years in the dataset span from 1961 to 2007."
    ]
@@ -2319,7 +2319,7 @@
     "<a id='population'></a>\n",
     "## Population Data\n",
     "\n",
-    "In order to interpret our data in a sensible way we also need population-data, as it of course will be a difference in food production with current population compared to 1960. The data is also collected from FAO, and looks very similar to the Livestock-dataset"
+    "In order to interpret our data in a sensible way we also need population-data, as it of course will be a difference in food production with current population compared to 1960. The data is also collected from FAO, and looks very similar to the Livestock-dataset. The dataset can be found here http://www.fao.org/faostat/en/#data/OA."
    ]
   },
   {
@@ -2754,7 +2754,7 @@
    "metadata": {},
    "source": [
     "#### Emission data number 1\n",
-    "The first emissions data in our dataset covers all emissions from agriculture. That is, both the emissions from crops and livestock production. "
+    "The first emissions data in our dataset covers all emissions from agriculture. That is, both the emissions from crops and livestock production. The dataset can be found here http://www.fao.org/faostat/en/#data/EM."
    ]
   },
   {
@@ -3024,7 +3024,7 @@
    "source": [
     "#### Emission data number 2\n",
     "\n",
-    "We also have another emissions file with some categories to easier be able to determine differences in emission between crops and livestock production. This data contains emission data for each continent."
+    "We also have another emissions file with some categories to easier be able to determine differences in emission between crops and livestock production. This data contains emission data for each continent. The dataset can be found here http://www.fao.org/faostat/en/#data/EI."
    ]
   },
   {
