--- a/livestock_cleaning.ipynb
+++ b/livestock_cleaning.ipynb
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
        "      <td>1961</td>\n",
        "      <td>tonnes</td>\n",
        "      <td>81898.0</td>\n",
-       "      <td>Meat, equidaes and camelidaes</td>\n",
+       "      <td>Meat, equidae and camelidae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -1325,7 +1325,7 @@
        "      <td>1962</td>\n",
        "      <td>tonnes</td>\n",
        "      <td>84979.0</td>\n",
-       "      <td>Meat, equidaes and camelidaes</td>\n",
+       "      <td>Meat, equidae and camelidae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -1334,7 +1334,7 @@
        "      <td>1963</td>\n",
        "      <td>tonnes</td>\n",
        "      <td>90274.0</td>\n",
-       "      <td>Meat, equidaes and camelidaes</td>\n",
+       "      <td>Meat, equidae and camelidae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -1343,7 +1343,7 @@
        "      <td>1964</td>\n",
        "      <td>tonnes</td>\n",
        "      <td>93563.0</td>\n",
-       "      <td>Meat, equidaes and camelidaes</td>\n",
+       "      <td>Meat, equidae and camelidae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -1352,7 +1352,7 @@
        "      <td>1965</td>\n",
        "      <td>tonnes</td>\n",
        "      <td>101465.0</td>\n",
-       "      <td>Meat, equidaes and camelidaes</td>\n",
+       "      <td>Meat, equidae and camelidae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -1427,23 +1427,23 @@
        "1270  South America  Production  2013  tonnes  18734877.0   \n",
        "1271  South America  Production  2013  tonnes   5166608.0   \n",
        "\n",
-       "                               Item  \n",
-       "0     Meat, equidaes and camelidaes  \n",
-       "1     Meat, equidaes and camelidaes  \n",
-       "2     Meat, equidaes and camelidaes  \n",
-       "3     Meat, equidaes and camelidaes  \n",
-       "4     Meat, equidaes and camelidaes  \n",
-       "...                             ...  \n",
-       "1267                      Meat, pig  \n",
-       "1268                    Meat, Total  \n",
-       "1269                   Meat, cattle  \n",
-       "1270                  Meat, chicken  \n",
-       "1271                      Meat, pig  \n",
+       "                             Item  \n",
+       "0     Meat, equidae and camelidae  \n",
+       "1     Meat, equidae and camelidae  \n",
+       "2     Meat, equidae and camelidae  \n",
+       "3     Meat, equidae and camelidae  \n",
+       "4     Meat, equidae and camelidae  \n",
+       "...                           ...  \n",
+       "1267                    Meat, pig  \n",
+       "1268                  Meat, Total  \n",
+       "1269                 Meat, cattle  \n",
+       "1270                Meat, chicken  \n",
+       "1271                    Meat, pig  \n",
        "\n",
        "[2544 rows x 6 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,19 +1457,19 @@
     "\n",
     "meat_equidae_camelidae = meat_wanted[meat_wanted.Item.isin(equidae_camelidae)]\n",
     "prod_equidae_camelidae = meat_equidae_camelidae.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
-    "prod_equidae_camelidae['Item'] = 'Meat, equidaes and camelidaes'\n",
+    "prod_equidae_camelidae['Item'] = 'Meat, equidae and camelidae'\n",
     "\n",
     "meat_bovidae = meat_wanted[meat_wanted.Item.isin(bovidae)]\n",
     "prod_bovidae = meat_bovidae.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
-    "prod_bovidae['Item'] = 'Meat, bovidaes'\n",
+    "prod_bovidae['Item'] = 'Meat, bovidae'\n",
     "\n",
     "meat_birds = meat_wanted[meat_wanted.Item.isin(birds)]\n",
     "prod_birds = meat_birds.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
-    "prod_birds['Item'] = 'Meat, birds excl chicken'\n",
+    "prod_birds['Item'] = 'Meat, bird excl chicken'\n",
     "\n",
     "meat_others = meat_wanted[meat_wanted.Item.isin(others)]\n",
     "prod_others = meat_others.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
-    "prod_others['Item'] = 'Meat, others'\n",
+    "prod_others['Item'] = 'Meat, other'\n",
     "\n",
     "meat_main = meat_wanted[meat_wanted.Item.isin(main)]\n",
     "prod_main = meat_main.groupby(['Area','Element','Year','Unit','Item']).agg({'Value':'sum'}).reset_index()\n",
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
