--- a/categorized_emissions_cleaning.ipynb
+++ b/categorized_emissions_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorized_emission_data = pd.read_csv('raw_data/Emissions_cat.csv', sep = ',', encoding = 'latin-1')"
+    "categorized_emission_data = pd.read_csv('raw_data/Emission_data.csv', sep = ',', encoding = 'latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,8 @@
        "      <td>0</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>World</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -78,7 +78,7 @@
        "      <td>1961</td>\n",
        "      <td>1961</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>105368.1674</td>\n",
+       "      <td>6404.6437</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -86,8 +86,8 @@
        "      <td>1</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>World</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -95,7 +95,7 @@
        "      <td>1962</td>\n",
        "      <td>1962</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>113427.2440</td>\n",
+       "      <td>6841.1636</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -103,8 +103,8 @@
        "      <td>2</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>World</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -112,7 +112,7 @@
        "      <td>1963</td>\n",
        "      <td>1963</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>118932.4544</td>\n",
+       "      <td>7246.6931</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -120,8 +120,8 @@
        "      <td>3</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>World</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -129,7 +129,7 @@
        "      <td>1964</td>\n",
        "      <td>1964</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>128025.1713</td>\n",
+       "      <td>7400.0959</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -137,8 +137,8 @@
        "      <td>4</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>World</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -146,7 +146,7 @@
        "      <td>1965</td>\n",
        "      <td>1965</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>137272.0303</td>\n",
+       "      <td>7668.5256</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -155,12 +155,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Domain Code                 Domain  Area Code   Area  Element Code  \\\n",
-       "0          EI  Emissions intensities       5000  World          7231   \n",
-       "1          EI  Emissions intensities       5000  World          7231   \n",
-       "2          EI  Emissions intensities       5000  World          7231   \n",
-       "3          EI  Emissions intensities       5000  World          7231   \n",
-       "4          EI  Emissions intensities       5000  World          7231   \n",
+       "  Domain Code                 Domain  Area Code    Area  Element Code  \\\n",
+       "0          EI  Emissions intensities       5100  Africa          7231   \n",
+       "1          EI  Emissions intensities       5100  Africa          7231   \n",
+       "2          EI  Emissions intensities       5100  Africa          7231   \n",
+       "3          EI  Emissions intensities       5100  Africa          7231   \n",
+       "4          EI  Emissions intensities       5100  Africa          7231   \n",
        "\n",
        "             Element  Item Code                    Item  Year Code  Year  \\\n",
        "0  Emissions (CO2eq)       1718  Cereals excluding rice       1961  1961   \n",
@@ -169,12 +169,12 @@
        "3  Emissions (CO2eq)       1718  Cereals excluding rice       1964  1964   \n",
        "4  Emissions (CO2eq)       1718  Cereals excluding rice       1965  1965   \n",
        "\n",
-       "        Unit        Value Flag  \\\n",
-       "0  gigagrams  105368.1674    A   \n",
-       "1  gigagrams  113427.2440    A   \n",
-       "2  gigagrams  118932.4544    A   \n",
-       "3  gigagrams  128025.1713    A   \n",
-       "4  gigagrams  137272.0303    A   \n",
+       "        Unit      Value Flag  \\\n",
+       "0  gigagrams  6404.6437    A   \n",
+       "1  gigagrams  6841.1636    A   \n",
+       "2  gigagrams  7246.6931    A   \n",
+       "3  gigagrams  7400.0959    A   \n",
+       "4  gigagrams  7668.5256    A   \n",
        "\n",
        "                                    Flag Description  \n",
        "0  Aggregate, may include official, semi-official...  \n",
@@ -184,7 +184,7 @@
        "4  Aggregate, may include official, semi-official...  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,16 @@
     "    [prod_data.Area.str.contains('World')]\n",
     "\n",
     "world_emission_data.to_pickle('./data/pickles/world_categorized_emissions.pkl')\n",
-    "world_prod_data.to_pickle('./data/pickles/world_categorized_production.pkl')"
+    "world_prod_data.to_pickle('./data/pickles/world_categorized_production.pkl')\n",
+    "\n",
+    "\n",
+    "continent_emisison_data = emission_data[emission_data.Item.str.contains('|'.join(['Meat', 'Rice', 'Cereal']))]\\\n",
+    "    [np.logical_not(emission_data.Area.str.contains('World'))]\n",
+    "continent_prod_data = prod_data[prod_data.Item.str.contains('|'.join(['Meat', 'Rice', 'Cereal']))]\\\n",
+    "    [np.logical_not(prod_data.Area.str.contains('World'))]\n",
+    "\n",
+    "continent_emisison_data.to_pickle('./data/pickles/continent_categorized_emissions.pkl')\n",
+    "continent_prod_data.to_pickle('./data/pickles/continent_categorized_production.pkl')"
    ]
   },
   {
