Crops categorization and q1 update

--- a/crops_cleaning.ipynb
+++ b/crops_cleaning.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "1  agave_fibres_nes  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing information in country based dataset: \n",
+      "Missing information in categorized dataset: \n",
       " Area            0\n",
       "Element Code    0\n",
       "Element         0\n",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "432          Gross PIN (base 1999-2001)            1961 to 2007   213  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "[159758 rows x 8 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
        "[55378 rows x 8 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        "array(['cereals_total'], dtype=object)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "array(['51'], dtype=object)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
        "[104380 rows x 8 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
        "       'Western Europe +', 'World +', 'Polynesia +'], dtype=object)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1425,6 +1425,18 @@
       "Number of unique countries: 219\n",
       "Number of unique continents: 6\n",
       "Number of unique areas: 28\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/verafristedt/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py:5208: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[name] = value\n"
      ]
     }
    ],
@@ -1450,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1677,7 @@
        "[15087 rows x 8 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1676,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1879,7 @@
        "[3290 rows x 8 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2081,7 @@
        "[86003 rows x 8 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2077,6 +2089,299 @@
    "source": [
     "crops_country"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Categorizing crops further"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['cereals_total', 'citrus_fruit_total', 'coarse_grain_total',\n",
+       "       'fibre_crops_primary', 'fruit_excl_melons_total',\n",
+       "       'jute_jute_like_fibres', 'oilcakes_equivalent', 'oilcrops_primary',\n",
+       "       'pulses_total', 'roots_and_tubers_total', 'treenuts_total',\n",
+       "       'vegetables_melons_total'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crops_continent.Item.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We choose to categorize into the following:\n",
+    "- Oilcrops & oilcakes, \n",
+    "- Fruits excl melons: citrus fruits and fruits\n",
+    "- Vegetables and melons\n",
+    "- Others: treenuts, jute & jutelike fibres, pulses, fibre crops\n",
+    "- Roots and tubers\n",
+    "- Cereals\n",
+    "- Coarse grains\n",
+    "\n",
+    "We choose to keep cereals and coars grain seperate even though they are the same family as they are both big categories independently. The others are all of the small crops categories."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Element</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Item</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>1961.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>7710901.0</td>\n",
+       "      <td>Oilcrops &amp; oilcakes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>1962.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>8107618.0</td>\n",
+       "      <td>Oilcrops &amp; oilcakes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>1963.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>8516313.0</td>\n",
+       "      <td>Oilcrops &amp; oilcakes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>8398635.0</td>\n",
+       "      <td>Oilcrops &amp; oilcakes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>1965.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>8696529.0</td>\n",
+       "      <td>Oilcrops &amp; oilcakes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>277</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>474049042.0</td>\n",
+       "      <td>Crops, total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>278</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>468856044.0</td>\n",
+       "      <td>Crops, total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>279</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>2005.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>474281295.0</td>\n",
+       "      <td>Crops, total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>280</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>479756406.0</td>\n",
+       "      <td>Crops, total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>281</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>Production Quantity</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>tonnes</td>\n",
+       "      <td>535318855.0</td>\n",
+       "      <td>Crops, total</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2256 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Area              Element    Year    Unit        Value  \\\n",
+       "0           Africa  Production Quantity  1961.0  tonnes    7710901.0   \n",
+       "1           Africa  Production Quantity  1962.0  tonnes    8107618.0   \n",
+       "2           Africa  Production Quantity  1963.0  tonnes    8516313.0   \n",
+       "3           Africa  Production Quantity  1964.0  tonnes    8398635.0   \n",
+       "4           Africa  Production Quantity  1965.0  tonnes    8696529.0   \n",
+       "..             ...                  ...     ...     ...          ...   \n",
+       "277  South America  Production Quantity  2003.0  tonnes  474049042.0   \n",
+       "278  South America  Production Quantity  2004.0  tonnes  468856044.0   \n",
+       "279  South America  Production Quantity  2005.0  tonnes  474281295.0   \n",
+       "280  South America  Production Quantity  2006.0  tonnes  479756406.0   \n",
+       "281  South America  Production Quantity  2007.0  tonnes  535318855.0   \n",
+       "\n",
+       "                    Item  \n",
+       "0    Oilcrops & oilcakes  \n",
+       "1    Oilcrops & oilcakes  \n",
+       "2    Oilcrops & oilcakes  \n",
+       "3    Oilcrops & oilcakes  \n",
+       "4    Oilcrops & oilcakes  \n",
+       "..                   ...  \n",
+       "277         Crops, total  \n",
+       "278         Crops, total  \n",
+       "279         Crops, total  \n",
+       "280         Crops, total  \n",
+       "281         Crops, total  \n",
+       "\n",
+       "[2256 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "oil = ['oilcakes_equivalent', 'oilcrops_primary']\n",
+    "fruits = ['fruit_excl_melons_total', 'citrus_fruit_total']\n",
+    "veg = ['vegetables_melons_total']\n",
+    "roots_tubers = ['roots_and_tubers_total']\n",
+    "cereals = ['cereals_total']\n",
+    "coarse_grain = ['coarse_grain_total']\n",
+    "others = ['treenuts_total', 'jute_jute_like_fibres', 'pulses_total', 'fibre_crops_primary']\n",
+    "\n",
+    "oil_crops = crops_continent[crops_continent.Item.isin(oil)]\n",
+    "prod_oil = oil_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_oil['Item'] = 'Oilcrops & oilcakes'\n",
+    "\n",
+    "fruit_crops = crops_continent[crops_continent.Item.isin(fruits)]\n",
+    "prod_fruit = fruit_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_fruit['Item'] = 'Fruits excl melons'\n",
+    "\n",
+    "veg_crops = crops_continent[crops_continent.Item.isin(veg)]\n",
+    "prod_veg = veg_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_veg['Item'] = 'Vegetables & melons'\n",
+    "\n",
+    "roots_tubers_crops = crops_continent[crops_continent.Item.isin(roots_tubers)]\n",
+    "prod_roots_tubers = roots_tubers_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_roots_tubers['Item'] = 'Roots & tubers'\n",
+    "\n",
+    "cereals_crops = crops_continent[crops_continent.Item.isin(cereals)]\n",
+    "prod_cereals = cereals_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_cereals['Item'] = 'Cereals'\n",
+    "\n",
+    "coarse_grain_crops = crops_continent[crops_continent.Item.isin(coarse_grain)]\n",
+    "prod_coarse_grain = coarse_grain_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_coarse_grain['Item'] = 'Coarse grain'\n",
+    "\n",
+    "coarse_grain_crops = crops_continent[crops_continent.Item.isin(coarse_grain)]\n",
+    "prod_coarse_grain = coarse_grain_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_coarse_grain['Item'] = 'Coarse grain'\n",
+    "\n",
+    "other_crops = crops_continent[crops_continent.Item.isin(others)]\n",
+    "prod_other = other_crops.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "prod_other['Item'] = 'Other crops'\n",
+    "\n",
+    "total_crops = crops_continent.groupby(['Area','Element','Year','Unit']).agg({'Value':'sum'}).reset_index()\n",
+    "total_crops['Item'] = 'Crops, total'\n",
+    "\n",
+    "crops_categorized = pd.concat([prod_oil, prod_fruit, prod_veg, prod_roots_tubers, prod_cereals, prod_coarse_grain, prod_other, total_crops], axis=0)\n",
+    "crops_categorized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save dataframe to pickles\n",
+    "crops_categorized.to_pickle('./data/pickles/crops_categorized.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
