Work on question 1

--- a/crops_cleaning.ipynb
+++ b/crops_cleaning.ipynb
@@ -2134,7 +2134,7 @@
     "- Cereals\n",
     "- Coarse grains\n",
     "\n",
-    "We choose to keep cereals and coars grain seperate even though they are the same family as they are both big categories independently. The others are all of the small crops categories."
+    "We choose to keep cereals and coars grain seperate even though they are the same family as they are both big categories independently. The 'others' are all of the small crops categories."
    ]
   },
   {
